get task_status & task_result
