# internal/delivery/http/task/responses.go
@@ -1,11 +1,23 @@
 package task
 
 import (
-	"github.com/google/uuid"
 	resp "media-processing-platform/internal/delivery/http/shared"
+	"media-processing-platform/internal/domain"
+
+	"github.com/google/uuid"
 )
 
 type CreateResponse struct {
-	ID     uuid.UUID `json:"id"`
+	ID     uuid.UUID `json:"task_id"`
+	resp.Response
+}
+
+type GetStatusResponse struct {
+	TaskStatus domain.TaskStatus `json:"task_status"`
+	resp.Response
+}
+
+type GetResultResponse struct {
+	Result string    `json:"result"`
 	resp.Response
 }
